--- a/1_notmnist.ipynb
+++ b/1_notmnist.ipynb
@@ -2018,15 +2018,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[The performance of the Logistic Linear Regression model is very low. This fact is reasonable since the problem itself is a non-linear problem.]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "The performance of the LogisticLinear Regression is "
-   ]
+   "source": []
   }
  ],
  "metadata": {
