load function defined in assignment 2

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -33,19 +33,7 @@
     "collapsed": false,
     "id": "JLpLa8Jt7Vu4"
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named tensorflow",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-4a2138a67abe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mprint_function\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmoves\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcPickle\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmoves\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: No module named tensorflow"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# These are all the modules we'll be using later. Make sure you can import them\n",
     "# before proceeding further.\n",
@@ -68,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -110,7 +98,7 @@
      "text": [
       "Training set (200000, 28, 28) (200000,)\n",
       "Validation set (10000, 28, 28) (10000,)\n",
-      "Test set (18724, 28, 28) (18724,)\n"
+      "Test set (10000, 28, 28) (10000,)\n"
      ]
     }
    ],
@@ -145,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -187,7 +175,7 @@
      "text": [
       "Training set (200000, 784) (200000, 10)\n",
       "Validation set (10000, 784) (10000, 10)\n",
-      "Test set (18724, 784) (18724, 10)\n"
+      "Test set (10000, 784) (10000, 10)\n"
      ]
     }
    ],
@@ -233,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -305,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -346,34 +334,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0 : 17.2939\n",
-      "Training accuracy: 10.8%\n",
-      "Validation accuracy: 13.8%\n",
-      "Loss at step 100 : 2.26903\n",
-      "Training accuracy: 72.3%\n",
-      "Validation accuracy: 71.6%\n",
-      "Loss at step 200 : 1.84895\n",
-      "Training accuracy: 74.9%\n",
-      "Validation accuracy: 73.9%\n",
-      "Loss at step 300 : 1.60701\n",
+      "Loss at step 0: 13.967539\n",
+      "Training accuracy: 17.3%\n",
+      "Validation accuracy: 20.4%\n",
+      "Loss at step 100: 2.286655\n",
+      "Training accuracy: 71.4%\n",
+      "Validation accuracy: 70.6%\n",
+      "Loss at step 200: 1.869808\n",
+      "Training accuracy: 74.1%\n",
+      "Validation accuracy: 73.0%\n",
+      "Loss at step 300: 1.638903\n",
+      "Training accuracy: 75.4%\n",
+      "Validation accuracy: 74.1%\n",
+      "Loss at step 400: 1.480806\n",
       "Training accuracy: 76.0%\n",
       "Validation accuracy: 74.5%\n",
-      "Loss at step 400 : 1.43912\n",
+      "Loss at step 500: 1.361766\n",
       "Training accuracy: 76.8%\n",
-      "Validation accuracy: 74.8%\n",
-      "Loss at step 500 : 1.31349\n",
-      "Training accuracy: 77.5%\n",
+      "Validation accuracy: 74.7%\n",
+      "Loss at step 600: 1.267520\n",
+      "Training accuracy: 77.3%\n",
       "Validation accuracy: 75.0%\n",
-      "Loss at step 600 : 1.21501\n",
-      "Training accuracy: 78.1%\n",
-      "Validation accuracy: 75.4%\n",
-      "Loss at step 700 : 1.13515\n",
-      "Training accuracy: 78.6%\n",
-      "Validation accuracy: 75.4%\n",
-      "Loss at step 800 : 1.0687\n",
-      "Training accuracy: 79.2%\n",
-      "Validation accuracy: 75.6%\n",
-      "Test accuracy: 82.9%\n"
+      "Loss at step 700: 1.190533\n",
+      "Training accuracy: 77.8%\n",
+      "Validation accuracy: 75.1%\n",
+      "Loss at step 800: 1.126189\n",
+      "Training accuracy: 78.4%\n",
+      "Validation accuracy: 75.2%\n",
+      "Test accuracy: 82.2%\n"
      ]
     }
    ],
@@ -421,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -481,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -522,28 +510,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0 : 16.8091\n",
-      "Minibatch accuracy: 12.5%\n",
-      "Validation accuracy: 14.0%\n",
-      "Minibatch loss at step 500 : 1.75256\n",
+      "Minibatch loss at step 0: 14.773958\n",
+      "Minibatch accuracy: 15.6%\n",
+      "Validation accuracy: 17.7%\n",
+      "Minibatch loss at step 500: 1.892294\n",
+      "Minibatch accuracy: 75.0%\n",
+      "Validation accuracy: 75.6%\n",
+      "Minibatch loss at step 1000: 1.578683\n",
+      "Minibatch accuracy: 69.5%\n",
+      "Validation accuracy: 77.0%\n",
+      "Minibatch loss at step 1500: 1.184360\n",
       "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 75.0%\n",
-      "Minibatch loss at step 1000 : 1.32283\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 76.6%\n",
-      "Minibatch loss at step 1500 : 0.944533\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Validation accuracy: 76.5%\n",
-      "Minibatch loss at step 2000 : 1.03795\n",
-      "Minibatch accuracy: 78.9%\n",
+      "Validation accuracy: 77.0%\n",
+      "Minibatch loss at step 2000: 1.283922\n",
+      "Minibatch accuracy: 71.1%\n",
+      "Validation accuracy: 78.4%\n",
+      "Minibatch loss at step 2500: 1.147758\n",
+      "Minibatch accuracy: 74.2%\n",
+      "Validation accuracy: 79.1%\n",
+      "Minibatch loss at step 3000: 1.162627\n",
+      "Minibatch accuracy: 78.1%\n",
       "Validation accuracy: 77.8%\n",
-      "Minibatch loss at step 2500 : 1.10219\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 78.0%\n",
-      "Minibatch loss at step 3000 : 0.758874\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 78.8%\n",
-      "Test accuracy: 86.1%\n"
+      "Test accuracy: 84.7%\n"
      ]
     }
    ],
@@ -589,6 +577,15 @@
     "\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -614,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
