created 1 hidden layer 1024 hidden nodes

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -41,7 +41,8 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from six.moves import cPickle as pickle\n",
-    "from six.moves import range"
+    "from six.moves import range\n",
+    "im"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -334,34 +335,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 13.967539\n",
-      "Training accuracy: 17.3%\n",
-      "Validation accuracy: 20.4%\n",
-      "Loss at step 100: 2.286655\n",
-      "Training accuracy: 71.4%\n",
-      "Validation accuracy: 70.6%\n",
-      "Loss at step 200: 1.869808\n",
-      "Training accuracy: 74.1%\n",
-      "Validation accuracy: 73.0%\n",
-      "Loss at step 300: 1.638903\n",
-      "Training accuracy: 75.4%\n",
+      "Loss at step 0: 20.071241\n",
+      "Training accuracy: 9.2%\n",
+      "Validation accuracy: 11.7%\n",
+      "Loss at step 100: 2.345149\n",
+      "Training accuracy: 71.3%\n",
+      "Validation accuracy: 70.8%\n",
+      "Loss at step 200: 1.888186\n",
+      "Training accuracy: 74.8%\n",
+      "Validation accuracy: 73.3%\n",
+      "Loss at step 300: 1.638134\n",
+      "Training accuracy: 75.9%\n",
       "Validation accuracy: 74.1%\n",
-      "Loss at step 400: 1.480806\n",
-      "Training accuracy: 76.0%\n",
-      "Validation accuracy: 74.5%\n",
-      "Loss at step 500: 1.361766\n",
+      "Loss at step 400: 1.472249\n",
       "Training accuracy: 76.8%\n",
+      "Validation accuracy: 74.6%\n",
+      "Loss at step 500: 1.351483\n",
+      "Training accuracy: 77.5%\n",
       "Validation accuracy: 74.7%\n",
-      "Loss at step 600: 1.267520\n",
-      "Training accuracy: 77.3%\n",
+      "Loss at step 600: 1.257636\n",
+      "Training accuracy: 78.0%\n",
       "Validation accuracy: 75.0%\n",
-      "Loss at step 700: 1.190533\n",
-      "Training accuracy: 77.8%\n",
+      "Loss at step 700: 1.181428\n",
+      "Training accuracy: 78.5%\n",
       "Validation accuracy: 75.1%\n",
-      "Loss at step 800: 1.126189\n",
-      "Training accuracy: 78.4%\n",
-      "Validation accuracy: 75.2%\n",
-      "Test accuracy: 82.2%\n"
+      "Loss at step 800: 1.117688\n",
+      "Training accuracy: 78.8%\n",
+      "Validation accuracy: 75.3%\n",
+      "Test accuracy: 81.9%\n"
      ]
     }
    ],
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -510,28 +511,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 14.773958\n",
-      "Minibatch accuracy: 15.6%\n",
-      "Validation accuracy: 17.7%\n",
-      "Minibatch loss at step 500: 1.892294\n",
+      "Minibatch loss at step 0: 17.738539\n",
+      "Minibatch accuracy: 14.1%\n",
+      "Validation accuracy: 13.0%\n",
+      "Minibatch loss at step 500: 2.022224\n",
+      "Minibatch accuracy: 70.3%\n",
+      "Validation accuracy: 75.4%\n",
+      "Minibatch loss at step 1000: 1.515190\n",
+      "Minibatch accuracy: 71.9%\n",
+      "Validation accuracy: 76.8%\n",
+      "Minibatch loss at step 1500: 1.127253\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 76.9%\n",
+      "Minibatch loss at step 2000: 1.473362\n",
+      "Minibatch accuracy: 75.8%\n",
+      "Validation accuracy: 77.9%\n",
+      "Minibatch loss at step 2500: 1.130446\n",
       "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 75.6%\n",
-      "Minibatch loss at step 1000: 1.578683\n",
-      "Minibatch accuracy: 69.5%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 1500: 1.184360\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 2000: 1.283922\n",
-      "Minibatch accuracy: 71.1%\n",
-      "Validation accuracy: 78.4%\n",
-      "Minibatch loss at step 2500: 1.147758\n",
-      "Minibatch accuracy: 74.2%\n",
-      "Validation accuracy: 79.1%\n",
-      "Minibatch loss at step 3000: 1.162627\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 77.8%\n",
-      "Test accuracy: 84.7%\n"
+      "Validation accuracy: 78.8%\n",
+      "Minibatch loss at step 3000: 1.106606\n",
+      "Minibatch accuracy: 75.0%\n",
+      "Validation accuracy: 78.3%\n",
+      "Test accuracy: 84.8%\n"
      ]
     }
    ],
@@ -580,12 +581,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\n",
+      "Minibatch loss at step 0: 2.262310\n",
+      "Minibatch accuracy: 17.2%\n",
+      "Minibatch loss at step 500: 0.524248\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Minibatch loss at step 1000: 0.564815\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Minibatch loss at step 1500: 0.536994\n",
+      "Minibatch accuracy: 86.7%\n",
+      "Minibatch loss at step 2000: 0.482647\n",
+      "Minibatch accuracy: 89.1%\n",
+      "Minibatch loss at step 2500: 0.440877\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Minibatch loss at step 3000: 0.479390\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Minibatch loss at step 3500: 0.362357\n",
+      "Minibatch accuracy: 89.8%\n",
+      "Minibatch loss at step 4000: 0.227047\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Minibatch loss at step 4500: 0.413555\n",
+      "Minibatch accuracy: 88.3%\n",
+      "Minibatch loss at step 5000: 0.346872\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Minibatch loss at step 5500: 0.291060\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Minibatch loss at step 6000: 0.371202\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Minibatch loss at step 6500: 0.239865\n",
+      "Minibatch accuracy: 92.2%\n",
+      "Minibatch loss at step 7000: 0.321275\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Minibatch loss at step 7500: 0.186752\n",
+      "Minibatch accuracy: 94.5%\n",
+      "Minibatch loss at step 8000: 0.134026\n",
+      "Minibatch accuracy: 96.9%\n",
+      "Minibatch loss at step 8500: 0.171038\n",
+      "Minibatch accuracy: 95.3%\n",
+      "Minibatch loss at step 9000: 0.304864\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Minibatch loss at step 9500: 0.211460\n",
+      "Minibatch accuracy: 93.0%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell author : Hoang NT\n",
+    "# Cell : Build a neural network with 1 hidden layer with RELU unit as the activation unit.\n",
+    "\n",
+    "learning_rate = 0.5\n",
+    "num_steps = 10000\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default() :\n",
+    "    # Input data. For the training data, we use a placeholder that will be fed\n",
+    "    # at run time with a training minibatch.\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,\n",
+    "                                    shape=(batch_size, image_size * image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "\n",
+    "    \n",
+    "    with tf.name_scope('hidden1') :\n",
+    "        # 1024 hidden units\n",
+    "        weights = tf.Variable(tf.truncated_normal([image_size * image_size, 1024], \n",
+    "                    stddev=1.0 / math.sqrt(float(image_size * image_size))), \n",
+    "                    name='weights')\n",
+    "        biases = tf.Variable(tf.zeros([1024]), name='biases')\n",
+    "        hidden1 = tf.nn.relu(tf.matmul(tf_train_dataset, weights) + biases)\n",
+    "    \n",
+    "    with tf.name_scope('softmax_linear') :\n",
+    "        weights = tf.Variable(tf.truncated_normal([1024, num_labels], \n",
+    "                    stddev=1.0 / math.sqrt(float(1024))),\n",
+    "                    name=\"weights\")\n",
+    "        biases = tf.Variable(tf.zeros([num_labels]), name='biases')\n",
+    "        logits = tf.matmul(hidden1, weights) + biases\n",
+    "        \n",
+    "    xentropy = tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels, name='xe')\n",
+    "    loss = tf.reduce_mean(xentropy, name='xentropy_mean')\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
+    "\n",
+    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    \n",
+    "    with tf.Session() as session:\n",
+    "        tf.initialize_all_variables().run()\n",
+    "        print(\"Initialized\")\n",
+    "        for step in range(num_steps):\n",
+    "            # Pick an offset within the training data, which has been randomized.\n",
+    "            # Note: we could use better randomization across epochs.\n",
+    "            offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "            # Generate a minibatch.\n",
+    "            batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "            batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "            # Prepare a dictionary telling the session where to feed the minibatch.\n",
+    "            # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+    "            # and the value is the numpy array to feed to it.\n",
+    "            feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "            _, l, predictions = session.run(\n",
+    "                [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "            if (step % 500 == 0):\n",
+    "              print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "              print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Write functions to create graph following standard tensorflow workflow. \n",
+    "TODO: Test trained model with valid and test set.\n",
+    "TODO: Create record for TensorBoard"
+   ]
   }
  ],
  "metadata": {
