better composition and test with valid/test dataset

--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -38,11 +38,11 @@
     "# These are all the modules we'll be using later. Make sure you can import them\n",
     "# before proceeding further.\n",
     "from __future__ import print_function\n",
+    "from __future__ import division\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from six.moves import cPickle as pickle\n",
-    "from six.moves import range\n",
-    "im"
+    "from six.moves import range"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -335,34 +335,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 20.071241\n",
-      "Training accuracy: 9.2%\n",
-      "Validation accuracy: 11.7%\n",
-      "Loss at step 100: 2.345149\n",
-      "Training accuracy: 71.3%\n",
-      "Validation accuracy: 70.8%\n",
-      "Loss at step 200: 1.888186\n",
-      "Training accuracy: 74.8%\n",
-      "Validation accuracy: 73.3%\n",
-      "Loss at step 300: 1.638134\n",
-      "Training accuracy: 75.9%\n",
-      "Validation accuracy: 74.1%\n",
-      "Loss at step 400: 1.472249\n",
-      "Training accuracy: 76.8%\n",
+      "Loss at step 0: 19.866497\n",
+      "Training accuracy: 6.4%\n",
+      "Validation accuracy: 8.6%\n",
+      "Loss at step 100: 2.329466\n",
+      "Training accuracy: 71.0%\n",
+      "Validation accuracy: 70.4%\n",
+      "Loss at step 200: 1.890468\n",
+      "Training accuracy: 74.1%\n",
+      "Validation accuracy: 73.0%\n",
+      "Loss at step 300: 1.647673\n",
+      "Training accuracy: 75.5%\n",
+      "Validation accuracy: 73.9%\n",
+      "Loss at step 400: 1.483999\n",
+      "Training accuracy: 76.4%\n",
+      "Validation accuracy: 74.3%\n",
+      "Loss at step 500: 1.361686\n",
+      "Training accuracy: 77.2%\n",
+      "Validation accuracy: 74.3%\n",
+      "Loss at step 600: 1.264506\n",
+      "Training accuracy: 77.7%\n",
+      "Validation accuracy: 74.4%\n",
+      "Loss at step 700: 1.184684\n",
+      "Training accuracy: 78.2%\n",
       "Validation accuracy: 74.6%\n",
-      "Loss at step 500: 1.351483\n",
-      "Training accuracy: 77.5%\n",
-      "Validation accuracy: 74.7%\n",
-      "Loss at step 600: 1.257636\n",
-      "Training accuracy: 78.0%\n",
-      "Validation accuracy: 75.0%\n",
-      "Loss at step 700: 1.181428\n",
-      "Training accuracy: 78.5%\n",
-      "Validation accuracy: 75.1%\n",
-      "Loss at step 800: 1.117688\n",
-      "Training accuracy: 78.8%\n",
-      "Validation accuracy: 75.3%\n",
-      "Test accuracy: 81.9%\n"
+      "Loss at step 800: 1.117799\n",
+      "Training accuracy: 78.7%\n",
+      "Validation accuracy: 74.8%\n",
+      "Test accuracy: 82.5%\n"
      ]
     }
    ],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -511,28 +511,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 17.738539\n",
-      "Minibatch accuracy: 14.1%\n",
-      "Validation accuracy: 13.0%\n",
-      "Minibatch loss at step 500: 2.022224\n",
-      "Minibatch accuracy: 70.3%\n",
-      "Validation accuracy: 75.4%\n",
-      "Minibatch loss at step 1000: 1.515190\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 76.8%\n",
-      "Minibatch loss at step 1500: 1.127253\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 76.9%\n",
-      "Minibatch loss at step 2000: 1.473362\n",
+      "Minibatch loss at step 0: 16.674349\n",
+      "Minibatch accuracy: 10.9%\n",
+      "Validation accuracy: 18.4%\n",
+      "Minibatch loss at step 500: 1.994655\n",
+      "Minibatch accuracy: 76.6%\n",
+      "Validation accuracy: 76.0%\n",
+      "Minibatch loss at step 1000: 1.471735\n",
+      "Minibatch accuracy: 68.0%\n",
+      "Validation accuracy: 77.1%\n",
+      "Minibatch loss at step 1500: 1.373459\n",
       "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 77.9%\n",
-      "Minibatch loss at step 2500: 1.130446\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 78.8%\n",
-      "Minibatch loss at step 3000: 1.106606\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 78.3%\n",
-      "Test accuracy: 84.8%\n"
+      "Validation accuracy: 77.6%\n",
+      "Minibatch loss at step 2000: 1.225114\n",
+      "Minibatch accuracy: 74.2%\n",
+      "Validation accuracy: 78.2%\n",
+      "Minibatch loss at step 2500: 1.388824\n",
+      "Minibatch accuracy: 72.7%\n",
+      "Validation accuracy: 78.9%\n",
+      "Minibatch loss at step 3000: 1.173666\n",
+      "Minibatch accuracy: 75.8%\n",
+      "Validation accuracy: 78.7%\n",
+      "Test accuracy: 85.3%\n"
      ]
     }
    ],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -591,46 +591,23 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 2.262310\n",
-      "Minibatch accuracy: 17.2%\n",
-      "Minibatch loss at step 500: 0.524248\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Minibatch loss at step 1000: 0.564815\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Minibatch loss at step 1500: 0.536994\n",
-      "Minibatch accuracy: 86.7%\n",
-      "Minibatch loss at step 2000: 0.482647\n",
-      "Minibatch accuracy: 89.1%\n",
-      "Minibatch loss at step 2500: 0.440877\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Minibatch loss at step 3000: 0.479390\n",
+      "Minibatch loss at step 0: 2.326019\n",
+      "Minibatch accuracy: 11.7%\n",
+      "Minibatch loss at step 500: 0.577293\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Minibatch loss at step 1000: 0.580259\n",
       "Minibatch accuracy: 82.8%\n",
-      "Minibatch loss at step 3500: 0.362357\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Minibatch loss at step 4000: 0.227047\n",
-      "Minibatch accuracy: 93.8%\n",
-      "Minibatch loss at step 4500: 0.413555\n",
-      "Minibatch accuracy: 88.3%\n",
-      "Minibatch loss at step 5000: 0.346872\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Minibatch loss at step 5500: 0.291060\n",
-      "Minibatch accuracy: 92.2%\n",
-      "Minibatch loss at step 6000: 0.371202\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Minibatch loss at step 6500: 0.239865\n",
-      "Minibatch accuracy: 92.2%\n",
-      "Minibatch loss at step 7000: 0.321275\n",
+      "Minibatch loss at step 1500: 0.515332\n",
+      "Minibatch accuracy: 85.9%\n",
+      "Minibatch loss at step 2000: 0.515489\n",
+      "Minibatch accuracy: 91.4%\n",
+      "Minibatch loss at step 2500: 0.475123\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Minibatch loss at step 3000: 0.397753\n",
       "Minibatch accuracy: 87.5%\n",
-      "Minibatch loss at step 7500: 0.186752\n",
-      "Minibatch accuracy: 94.5%\n",
-      "Minibatch loss at step 8000: 0.134026\n",
-      "Minibatch accuracy: 96.9%\n",
-      "Minibatch loss at step 8500: 0.171038\n",
-      "Minibatch accuracy: 95.3%\n",
-      "Minibatch loss at step 9000: 0.304864\n",
-      "Minibatch accuracy: 93.8%\n",
-      "Minibatch loss at step 9500: 0.211460\n",
-      "Minibatch accuracy: 93.0%\n"
+      "Minibatch loss at step 3500: 0.364534\n",
+      "Minibatch accuracy: 90.6%\n",
+      "Validation dataset accuracy: 80.5%\n"
      ]
     }
    ],
@@ -638,39 +615,69 @@
     "# Cell author : Hoang NT\n",
     "# Cell : Build a neural network with 1 hidden layer with RELU unit as the activation unit.\n",
     "\n",
-    "learning_rate = 0.5\n",
-    "num_steps = 10000\n",
+    "import math\n",
+    "\n",
+    "alpha = 0.2 # learning rate\n",
+    "num_steps = 4000\n",
+    "image_pixels = image_size * image_size\n",
+    "hidden_units = 1024\n",
+    "\n",
+    "# Scale standard deriviation\n",
+    "# Copied from mnist.py\n",
+    "# TODO: Understand why they do this\n",
+    "def scale_dev(dsize) :\n",
+    "    return 1.0 / math.sqrt(float(dsize))\n",
+    "\n",
+    "# Build the model as a graph with 1 hidden layer\n",
+    "def inference(train_data, hidden_units_num) :\n",
+    "    # Define variables and ops for the hidden layer\n",
+    "    with tf.name_scope('hidden_layer') :\n",
+    "        weights = tf.Variable(tf.truncated_normal([image_pixels, hidden_units_num],\n",
+    "                                                 stddev = scale_dev(image_pixels)),\n",
+    "                             name='weights')\n",
+    "        biases = tf.Variable(tf.zeros([hidden_units_num]), name='biases')\n",
+    "        hidden1 = tf.nn.relu(tf.matmul(train_data, weights) + biases)\n",
+    "    # Define variables and ops for the output (linear) layer\n",
+    "    with tf.name_scope('linear_output') :\n",
+    "        weights = tf.Variable(tf.truncated_normal([hidden_units_num, num_labels],\n",
+    "                                                 stddev = scale_dev(hidden_units_num)),\n",
+    "                              name='weights')\n",
+    "        biases = tf.Variable(tf.zeros([num_labels]), name='biases')\n",
+    "        logits = tf.matmul(hidden1, weights) + biases\n",
+    "    return logits\n",
+    "\n",
+    "# Loss function for the model. The labels is expected to be in onehot\n",
+    "def loss(logits, labels) :\n",
+    "    cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, labels, name='xe')\n",
+    "    loss = tf.reduce_mean(cross_entropy, name='xentropy_mean')\n",
+    "    return loss\n",
+    "\n",
+    "# Create training operations\n",
+    "def training(loss, learning_rate) :\n",
+    "    # Create a scalar summary for loss function\n",
+    "    tf.scalar_summary(loss.op.name, loss)\n",
+    "    # Gradient descent optimizer\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
+    "    # Variable to track global step\n",
+    "    global_step = tf.Variable(0, name='global_step', trainable=False)\n",
+    "    # Train operation\n",
+    "    train_op = optimizer.minimize(loss, global_step=global_step)\n",
+    "    return train_op\n",
     "\n",
     "graph = tf.Graph()\n",
     "with graph.as_default() :\n",
     "    # Input data. For the training data, we use a placeholder that will be fed\n",
     "    # at run time with a training minibatch.\n",
     "    tf_train_dataset = tf.placeholder(tf.float32,\n",
-    "                                    shape=(batch_size, image_size * image_size))\n",
+    "                                    shape=(batch_size, image_pixels))\n",
     "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
-    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "    tf_test_dataset = tf.constant(test_dataset)\n",
-    "\n",
     "    \n",
-    "    with tf.name_scope('hidden1') :\n",
-    "        # 1024 hidden units\n",
-    "        weights = tf.Variable(tf.truncated_normal([image_size * image_size, 1024], \n",
-    "                    stddev=1.0 / math.sqrt(float(image_size * image_size))), \n",
-    "                    name='weights')\n",
-    "        biases = tf.Variable(tf.zeros([1024]), name='biases')\n",
-    "        hidden1 = tf.nn.relu(tf.matmul(tf_train_dataset, weights) + biases)\n",
-    "    \n",
-    "    with tf.name_scope('softmax_linear') :\n",
-    "        weights = tf.Variable(tf.truncated_normal([1024, num_labels], \n",
-    "                    stddev=1.0 / math.sqrt(float(1024))),\n",
-    "                    name=\"weights\")\n",
-    "        biases = tf.Variable(tf.zeros([num_labels]), name='biases')\n",
-    "        logits = tf.matmul(hidden1, weights) + biases\n",
-    "        \n",
-    "    xentropy = tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels, name='xe')\n",
-    "    loss = tf.reduce_mean(xentropy, name='xentropy_mean')\n",
-    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
-    "\n",
+    "    # Computational graph\n",
+    "    logits = inference(tf_train_dataset, hidden_units)\n",
+    "    # Loss function\n",
+    "    loss = loss(logits, tf_train_labels)\n",
+    "    optimizer = training(loss, alpha)\n",
+    "    # Softmax layer for logits\n",
     "    train_prediction = tf.nn.softmax(logits)\n",
     "    \n",
     "    with tf.Session() as session:\n",
@@ -690,8 +697,15 @@
     "            _, l, predictions = session.run(\n",
     "                [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
     "            if (step % 500 == 0):\n",
-    "              print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
-    "              print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))"
+    "                print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+    "                print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+    "        valid_data = valid_dataset[:batch_size,:]\n",
+    "        test_data = test_dataset[:batch_size,:]\n",
+    "        feed_dict = {tf_train_dataset : valid_data}\n",
+    "        prediction = session.run(train_prediction, feed_dict=feed_dict)\n",
+    "        print (\"Validation dataset accuracy: %.1f%%\" % \n",
+    "               accuracy(prediction, valid_labels[:batch_size]))\n",
+    "                "
    ]
   },
   {
@@ -702,6 +716,55 @@
     "TODO: Test trained model with valid and test set.\n",
     "TODO: Create record for TensorBoard"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(128, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (prediction.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.57962958e-07   4.32170765e-07   4.60324010e-08   6.21461727e-09\n",
+      "   1.44110925e-06   9.99996781e-01   5.83177723e-07   8.25841866e-08\n",
+      "   3.24906750e-08   3.08101875e-07]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (prediction[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
