--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -723,7 +723,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: Create record for TensorBoard"
+    "TODO: Create record for TensorBoard\n",
+    "TODO: Visualize the weights matrix for each step"
    ]
   },
   {
