--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -334,7 +334,7 @@
     "# Output:\n",
     "### logits - tf.Tensor - Result of computation\n",
     "def logistic_inference(train_data) :\n",
-    "    # Weight matrix initialized as small shit\n",
+    "    # Weight matrix initialized as randomized matrix\n",
     "    with tf.variable_scope(logis_scope) :\n",
     "        weights = tf.get_variable('weights',\n",
     "                                  dtype=tf.float32,\n",
@@ -427,6 +427,22 @@
     "Let's demonstrate an extreme case of overfitting. Restrict your training data to just a few batches. What happens?\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "overfit_batch_num = 5\n",
+    "batch_size = 1000\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default() :\n",
+    "    tf_train_dataset = tf.placeholder([None,IMAGE_PIXELS], tf)"
    ]
   },
   {
