--- a/3_regularization.ipynb
+++ b/3_regularization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -273,37 +273,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 0: 2.418465\n",
-      "Minibatch accuracy: 13.3%\n",
-      "Minibatch loss at step 500: 0.860850\n",
+      "Minibatch loss at step 0: 2.314857\n",
+      "Minibatch accuracy: 10.9%\n",
+      "Minibatch loss at step 500: 0.860063\n",
       "Minibatch accuracy: 78.9%\n",
-      "Minibatch loss at step 1000: 0.828556\n",
+      "Minibatch loss at step 1000: 0.829281\n",
+      "Minibatch accuracy: 76.6%\n",
+      "Minibatch loss at step 1500: 0.762297\n",
+      "Minibatch accuracy: 82.8%\n",
+      "Minibatch loss at step 2000: 0.822789\n",
       "Minibatch accuracy: 78.1%\n",
-      "Minibatch loss at step 1500: 0.761502\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Minibatch loss at step 2000: 0.823404\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Minibatch loss at step 2500: 0.867496\n",
+      "Minibatch loss at step 2500: 0.865590\n",
       "Minibatch accuracy: 81.2%\n",
-      "Minibatch loss at step 3000: 0.790147\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Minibatch loss at step 3500: 0.685541\n",
-      "Minibatch accuracy: 83.6%\n",
-      "Minibatch loss at step 4000: 0.655737\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Minibatch loss at step 4500: 0.722313\n",
+      "Minibatch loss at step 3000: 0.789147\n",
       "Minibatch accuracy: 79.7%\n",
-      "Minibatch loss at step 5000: 0.780860\n",
-      "Minibatch accuracy: 79.7%\n",
-      "Minibatch loss at step 5500: 0.825011\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Minibatch loss at step 6000: 0.699418\n",
-      "Minibatch accuracy: 84.4%\n",
-      "Minibatch loss at step 6500: 0.694095\n",
+      "Minibatch loss at step 3500: 0.684425\n",
       "Minibatch accuracy: 83.6%\n",
-      "Minibatch loss at step 7000: 0.763705\n",
+      "Minibatch loss at step 4000: 0.655271\n",
       "Minibatch accuracy: 84.4%\n",
-      "Minibatch loss at step 7500: 0.780572\n",
+      "Minibatch loss at step 4500: 0.722902\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Minibatch loss at step 5000: 0.781310\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Minibatch loss at step 5500: 0.825230\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Minibatch loss at step 6000: 0.699435\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 6500: 0.694292\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Minibatch loss at step 7000: 0.763707\n",
+      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 7500: 0.780489\n",
       "Minibatch accuracy: 77.3%\n",
       "Validation data accuracy: 83.2%\n"
      ]
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -497,55 +497,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 0: 2.367634\n",
-      "Minibatch accuracy: 9.7%\n",
-      "Minibatch loss at step 50: 0.600277\n",
-      "Minibatch accuracy: 85.5%\n",
-      "Minibatch loss at step 100: 0.453622\n",
-      "Minibatch accuracy: 89.5%\n",
-      "Minibatch loss at step 150: 0.366717\n",
-      "Minibatch accuracy: 92.3%\n",
-      "Minibatch loss at step 200: 0.306942\n",
-      "Minibatch accuracy: 94.5%\n",
-      "Minibatch loss at step 250: 0.262940\n",
+      "Minibatch loss at step 0: 4.335188\n",
+      "Minibatch accuracy: 10.0%\n",
+      "Minibatch loss at step 50: 1.094598\n",
+      "Minibatch accuracy: 95.0%\n",
+      "Minibatch loss at step 100: 1.090454\n",
+      "Minibatch accuracy: 95.0%\n",
+      "Minibatch loss at step 150: 1.088063\n",
+      "Minibatch accuracy: 95.0%\n",
+      "Minibatch loss at step 200: 1.086368\n",
       "Minibatch accuracy: 96.0%\n",
-      "Minibatch loss at step 300: 0.229124\n",
-      "Minibatch accuracy: 97.2%\n",
-      "Minibatch loss at step 350: 0.202337\n",
-      "Minibatch accuracy: 97.7%\n",
-      "Minibatch loss at step 400: 0.180632\n",
-      "Minibatch accuracy: 97.8%\n",
-      "Minibatch loss at step 450: 0.162737\n",
-      "Minibatch accuracy: 98.3%\n",
-      "Minibatch loss at step 500: 0.147773\n",
-      "Minibatch accuracy: 98.8%\n",
-      "Minibatch loss at step 550: 0.135110\n",
-      "Minibatch accuracy: 98.8%\n",
-      "Minibatch loss at step 600: 0.124281\n",
-      "Minibatch accuracy: 99.3%\n",
-      "Minibatch loss at step 650: 0.114936\n",
-      "Minibatch accuracy: 99.3%\n",
-      "Minibatch loss at step 700: 0.106805\n",
-      "Minibatch accuracy: 99.3%\n",
-      "Minibatch loss at step 750: 0.099679\n",
-      "Minibatch accuracy: 99.7%\n",
-      "Minibatch loss at step 800: 0.093391\n",
-      "Minibatch accuracy: 99.8%\n",
-      "Minibatch loss at step 850: 0.087809\n",
-      "Minibatch accuracy: 99.8%\n",
-      "Minibatch loss at step 900: 0.082825\n",
-      "Minibatch accuracy: 99.8%\n",
-      "Minibatch loss at step 950: 0.078352\n",
-      "Minibatch accuracy: 99.8%\n",
-      "Validation data accuracy: 83.5%\n",
-      "Sanitized test dataset accuracy: 82.0%\n"
+      "Minibatch loss at step 250: 1.085165\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 300: 1.084310\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 350: 1.083700\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 400: 1.083262\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 450: 1.082947\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 500: 1.082719\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 550: 1.082553\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 600: 1.082430\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 650: 1.082340\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 700: 1.082273\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 750: 1.082222\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 800: 1.082184\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 850: 1.082155\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 900: 1.082134\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Minibatch loss at step 950: 1.082117\n",
+      "Minibatch accuracy: 96.0%\n",
+      "Validation data accuracy: 68.0%\n",
+      "Sanitized test dataset accuracy: 66.7%\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 600\n",
+    "batch_size = 100\n",
     "num_step = 1000\n",
-    "_beta = 0.0 # Disable regularization\n",
+    "_beta = 0.5 # Disable regularization\n",
     "\n",
     "graph = tf.Graph()\n",
     "with graph.as_default() :\n",
@@ -740,21 +740,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0 loss: 2.315984\n",
-      "Step 0 accuracy: 15.0%\n",
-      "Step 500 loss: 0.027866\n",
-      "Step 500 accuracy: 100.0%\n"
+      "==============================================\n",
+      "hidden_layers_cf: [256] | keep_prob_cf: [1] | learning_rate: 0.05 | num_step: 2560 | batch_size: 128 | over_fit : False |\n",
+      "Step 0 loss: 2.270972\n",
+      "Step 0 accuracy: 19.5%\n",
+      "Step 500 loss: 0.746613\n",
+      "Step 500 accuracy: 78.9%\n",
+      "Step 1000 loss: 0.671384\n",
+      "Step 1000 accuracy: 78.9%\n",
+      "Step 1500 loss: 0.582257\n",
+      "Step 1500 accuracy: 83.6%\n"
      ]
     }
    ],
    "source": [
-    "_alpha = 0.15\n",
-    "_beta = 0.001\n",
-    "batch_size = 600\n",
-    "num_step = 1000\n",
     "# log_dir to visualize the graph\n",
     "log_dir = 'tf_log_dropout'\n",
-    "over_fit = True\n",
     "\n",
     "\n",
     "# Create a neural network with dropout in each hidden layer\n",
@@ -781,8 +782,8 @@
     "            biases = tf.get_variable('biases', dtype=tf.float32, \n",
     "                                     initializer=tf.zeros([num_nodes]))\n",
     "        # Update input data with dropout layer (layered matmul and addition)\n",
-    "        data = tf.nn.dropout((tf.matmul(data, weights) + biases), keep_prob[i], \n",
-    "                             name='dropout')\n",
+    "        data = tf.nn.relu(tf.nn.dropout((tf.matmul(data, weights) + biases), keep_prob[i], \n",
+    "                             name='dropout'), name = 'relu')\n",
     "        # Summary ops to collect distribution\n",
     "        w_hist = tf.histogram_summary('weights', weights)\n",
     "        b_hist = tf.histogram_summary('biases', biases)\n",
@@ -838,59 +839,70 @@
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32)) * 100\n",
     "    return accuracy\n",
     "\n",
-    "graph = tf.Graph()\n",
-    "with graph.as_default() :\n",
-    "    # Place holder to feed data\n",
-    "    tf_data = tf.placeholder(dtype=tf.float32, shape=[None, IMAGE_PIXELS])\n",
-    "    tf_labels = tf.placeholder(dtype=tf.float32, shape=[None, num_labels])\n",
-    "    # Hidden layer configurations\n",
-    "    hidden_config = [1024]\n",
-    "    keep_prob = tf.placeholder(dtype=tf.float32, shape=[len(hidden_config)])\n",
-    "    # Build the graph\n",
-    "    logits = dropout_inference(tf_data, hidden_config, keep_prob)\n",
-    "    loss = dropout_loss(logits, tf_labels)\n",
-    "    train_op = dropout_train(loss, _alpha)\n",
-    "    acc = dropout_acc(logits, tf_labels)\n",
-    "    with tf.Session() as sess :\n",
-    "        # Summary\n",
-    "        merged = tf.merge_all_summaries()\n",
-    "        writer = tf.train.SummaryWriter(log_dir, sess.graph_def)\n",
-    "        # Initialize all variables\n",
-    "        init = tf.initialize_all_variables()\n",
-    "        sess.run(init)\n",
-    "        # Feed data for test and validation\n",
-    "        test_dict = {tf_data : test_dataset, tf_labels : test_labels, \n",
-    "                     keep_prob : [1.0]}\n",
-    "        valid_dict = {tf_data : valid_dataset, tf_labels : valid_labels,\n",
-    "                     keep_prob : [1.0]}\n",
-    "        # Test for overfit\n",
-    "        ok = 1\n",
-    "        if over_fit :\n",
-    "            ok = 0 # Keep offset_data at 0\n",
-    "        # Training process\n",
-    "        for i in range(num_step) :\n",
-    "            # Record performance on validation dataset\n",
-    "            if i % 10 == 0 :\n",
-    "                result = sess.run([merged, acc], feed_dict=valid_dict)\n",
-    "                summary_str = result[0]\n",
-    "                writer.add_summary(summary_str, i)\n",
-    "                \n",
-    "            offset = ok * (i * batch_size) % (train_labels.shape[0] - batch_size)\n",
-    "            feed_data = train_dataset[offset:(offset + batch_size)]\n",
-    "            feed_labels = train_labels[offset:(offset+batch_size)]\n",
-    "            train_dict = {tf_data : feed_data, tf_labels : feed_labels, \n",
-    "                          keep_prob : [0.8]}\n",
-    "            _, step_loss, step_acc  = sess.run([train_op, loss, acc], feed_dict=train_dict)\n",
-    "            if i % 2000 == 0 :\n",
-    "                randomize(train_dataset, train_labels)\n",
-    "            if i % 500 == 0 :\n",
-    "                print (\"Step %d loss: %f\" % (i, step_loss))\n",
-    "                print (\"Step %d accuracy: %.1f%%\" % (i, step_acc))\n",
-    "        \n",
-    "        ac = sess.run(acc, feed_dict=test_dict)\n",
-    "        print (\"Accuracy in test dataset: %s\" % ac)\n",
+    "def dropout_run(hidden_layers_cf, keep_prob_cf, learning_rate, num_step, batch_size, over_fit) :\n",
+    "    print ('==============================================')\n",
+    "    print ('hidden_layers_cf: %s | keep_prob_cf: %s | learning_rate: %s | num_step: %s | batch_size: %s | over_fit : %s |'\n",
+    "          % (str(hidden_layers_cf), str(keep_prob_cf), str(learning_rate), str(num_step), str(batch_size), str(over_fit)))\n",
+    "    graph = tf.Graph()\n",
+    "    with graph.as_default() :\n",
+    "        # Place holder to feed data\n",
+    "        tf_data = tf.placeholder(dtype=tf.float32, shape=[None, IMAGE_PIXELS])\n",
+    "        tf_labels = tf.placeholder(dtype=tf.float32, shape=[None, num_labels])\n",
+    "        # Hidden layer configurations\n",
+    "        hidden_config = hidden_layers_cf\n",
+    "        keep_prob = tf.placeholder(dtype=tf.float32, shape=[len(hidden_config)])\n",
+    "        # Build the graph\n",
+    "        logits = dropout_inference(tf_data, hidden_config, keep_prob)\n",
+    "        loss = dropout_loss(logits, tf_labels)\n",
+    "        train_op = dropout_train(loss, learning_rate)\n",
+    "        acc = dropout_acc(logits, tf_labels)\n",
+    "        with tf.Session() as sess :\n",
+    "            # Summary\n",
+    "            merged = tf.merge_all_summaries()\n",
+    "            writer = tf.train.SummaryWriter(log_dir, sess.graph_def)\n",
+    "            # Initialize all variables\n",
+    "            init = tf.initialize_all_variables()\n",
+    "            sess.run(init)\n",
+    "            # Feed data for test and validation\n",
+    "            test_dict = {tf_data : test_dataset, tf_labels : test_labels, \n",
+    "                         keep_prob : [1.0]}\n",
+    "            valid_dict = {tf_data : valid_dataset, tf_labels : valid_labels,\n",
+    "                         keep_prob : [1.0]}\n",
+    "            # Test for overfit\n",
+    "            ok = 1\n",
+    "            if over_fit :\n",
+    "                ok = 0 # Keep offset_data at 0\n",
+    "            # Training process\n",
+    "            for i in range(num_step) :\n",
+    "                # Record performance on validation dataset\n",
+    "                if i % 1000 == 0 :\n",
+    "                    result = sess.run([merged, acc], feed_dict=valid_dict)\n",
+    "                    summary_str = result[0]\n",
+    "                    writer.add_summary(summary_str, i)\n",
+    "\n",
+    "                offset = ok * (i * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "                feed_data = train_dataset[offset:(offset + batch_size)]\n",
+    "                feed_labels = train_labels[offset:(offset+batch_size)]\n",
+    "                train_dict = {tf_data : feed_data, tf_labels : feed_labels, \n",
+    "                              keep_prob : keep_prob_cf}\n",
+    "                _, step_loss, step_acc  = sess.run([train_op, loss, acc], feed_dict=train_dict)\n",
+    "                if i % 2000 == 0 :\n",
+    "                    randomize(train_dataset, train_labels)\n",
+    "                if i % 500 == 0 :\n",
+    "                    print (\"Step %d loss: %f\" % (i, step_loss))\n",
+    "                    print (\"Step %d accuracy: %.1f%%\" % (i, step_acc))\n",
+    "\n",
+    "            ac = sess.run(acc, feed_dict=test_dict)\n",
+    "            print (\"Accuracy in test dataset: %s\" % ac)\n",
     "            \n",
-    "    "
+    "for learning_rates in [0.05, 0.1, 0.25, 0.5] :\n",
+    "    for batch_sizes in [128, 256, 512, 1024, 2000] :\n",
+    "        for num_step in [2560, 5120, 10240] :\n",
+    "            for hidden_layers_cf in [[256], [512], [1024], [2048]] :\n",
+    "                for keep_prob_cf in [[1], [0.8], [0.4], [0.2], [0.1]] :\n",
+    "                    for over_fit in [False] :\n",
+    "                        dropout_run(hidden_layers_cf, keep_prob_cf, learning_rates, num_step, batch_sizes, over_fit)\n",
+    "                    "
    ]
   },
   {
@@ -924,7 +936,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "        \n",
+    "                "
+   ]
   }
  ],
  "metadata": {
